preventing text from causing overflow

--- a/components/Home/TextOverlay/TextOverlay.module.css
+++ b/components/Home/TextOverlay/TextOverlay.module.css
@@ -21,6 +21,8 @@
   justify-self: center;
   align-self: center;
   width: 60%;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 .motto {
